# quantization_extend

./: .gitignore  PLAN_DEEPFAKE_MVP.md  README.md  __init__.py  build_db_example.sh  cli.py  db.py  extract.py  match.py  pyproject.toml  utils.py
deepfake_module/: __init__.py  analysis_ela.py  analysis_frequency.py  frame_extractor.py
output/: forensic_db_combined.json  relatorio_percentual.txt
scripts/: comparador_forense.py  extrator_dqt_categorico.py  gerar_dataset_sintetico.py  verify_deepfake_module.py
